# deploy-crewai-agents-terraform

./: .gitignore  AmazonQ.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  env.example  pyproject.toml
lambda/: main.py
lambda/aws_infrastructure_security_audit_and_reporting/: crew.py  main.py
src/: main.py
src/aws_infrastructure_security_audit_and_reporting/: crew.py  main.py
terraform/: .terraform.lock.hcl  lambda_handler.py  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
